// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`match snapshot 1`] = `
<div>
  <button
    class="sc-bxivhb jBRBGM"
    size="2"
    type="button"
  />
</div>
`;

exports[`renders medium dropdown 1`] = `
<div>
  <button
    class="sc-bxivhb jBRBGM"
    size="2"
    type="button"
  >
    <p
      class="sc-bdVaJa Wzjkf"
    >
      Example
    </p>
  </button>
  <ul
    class="sc-gzVnrw cPAyBT"
    data-testid="dropdown"
    size="1"
  />
</div>
`;

exports[`renders small dropdown 1`] = `
<div>
  <button
    class="sc-bxivhb jBRBGM"
    size="2"
    type="button"
  >
    <p
      class="sc-bdVaJa Wzjkf"
    >
      Example
    </p>
  </button>
  <ul
    class="sc-gzVnrw gPHIJB"
    data-testid="dropdown"
  />
</div>
`;
